2007-12-02  Karl Berry  <karl@gnu.org>

	* info/info.c (main): undo change of 2006-08-13 in this file,
	so info can be easily tested in multibyte locales.

	* all files: use the multibyte case comparison functions
	mbscasecmp and mbsncasecmp from gnulib, instead of simply
	strcasecmp and strncasecmp.  (1) gnulib strcase is buggy,
	declaring the str* functions in string.h instead of strings.h,
	leading to build failure on AIX 4.3.3 (report from Gary E. Barnes,
	21 Nov 2007 12:37:12).  (2) we want to support multibyte locales
	better anyway.

2007-11-30  Sergey Poznyakoff  <gray@gnu.org.ua>

	* doc/Makeinfo.am: Rename txi-no.tex to txi-nb.tex (see
	2007-10-31).
	
2007-11-27  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (headings on off): clarify the meaning of
	@headings on.  Report from Dilyan Palauzov, 25 Nov 2007 17:07:09.

2007-11-25  Stephane Chazelas  <stephane_chazelas@yahoo.fr>

	*  info/indices.c (info_next_index_match): use the line number
	specified in the index entry, if available.

2007-11-23  Benno Schulenberg <bensberg@justemail.net>

	* info/infodoc.c: keep help strings together for translation.

2007-11-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* util/texi2dvi: Fix quoting for white space in file names.

2007-11-21  Karl Berry  <karl@gnu.org>

	* makeinfo/lang.h (hz): #undef, since apparently it is defined on
	AIX 4.3.3.
	Report from: Gary E. Barnes, 21 Nov 2007 12:37:12.

2007-11-16  Karl Berry  <karl@gnu.org>

	* info/info.c (info_error): use puts instead of fprintf if we
	don't actually have any arguments.  Else
	info --file=".%x.%x." will try to print NULL.
	Report from Cody Rester, 16 Nov 2007 08:59:48.

2007-10-31  Karl Berry  <karl@gnu.org>

	* doc/txi-no.tex: rename to txi-nb.tex.
	* po/no.po: remove.
	* po/LINGUAS: remove no.	

2007-10-24  Karl Berry  <karl@gnu.org>

	* makeinfo/node.c (cm_node),
	* makeinfo/cmds.c (cm_settitle): no need to call xml_begin_document.
	* makeinfo/makeinfo.c (convert_from_loaded_file): call