@@ -1,3 +1,10 @@
+2007-12-09  Fabian Groffen  <grobian@gentoo.org>  (tiny change)
+
+	* info/makedoc.c (main): reorder calls following the Makefile
+	dependencies, for high-precision filesystems.  
+	http://bugs.gentoo.org/show_bug.cgi?id=200662
+	bug-texinfo mail from 3 Dec 2007 17:59:13 +0100.
+	
 2007-12-02  Karl Berry  <karl@gnu.org>
 
 	* info/info.c (main): undo change of 2006-08-13 in this file,
